refactor: Double - toOneDecimalPlacesInString 추가

--- a/WeatherForecast/WeatherForecast/Base.lproj/Main.storyboard
+++ b/WeatherForecast/WeatherForecast/Base.lproj/Main.storyboard
@@ -670,7 +670,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="K4k-Gw-bP5"/>
+        <segue reference="rdi-cY-Yby"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="background" width="580" height="1031"/>
