feat: Detail View - 각 cell에 데이터 전달

--- a/WeatherForecast/WeatherForecast/View/DetailView/HourlyWeather/HourlyGridCell.xib
+++ b/WeatherForecast/WeatherForecast/View/DetailView/HourlyWeather/HourlyGridCell.xib
@@ -10,58 +10,48 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HourlyGridCell" customModule="WeatherForecast" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="70" height="130"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HourlyGridCell" id="gTV-IL-0wX" customClass="HourlyGridCell" customModule="WeatherForecast" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="70" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="70" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="70" height="150"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GWY-QW-5tl">
-                        <rect key="frame" x="0.0" y="0.0" width="70" height="130"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GWY-QW-5tl">
+                        <rect key="frame" x="0.0" y="0.0" width="70" height="120"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S03-3u-YnR">
-                                <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
+                                <rect key="frame" x="0.0" y="0.0" width="70" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="Y5c-S3-3cI"/>
+                                    <constraint firstAttribute="height" constant="20" id="Xi0-zN-E0N"/>
+                                    <constraint firstAttribute="width" constant="70" id="vdX-GJ-YGa"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dxp-HH-QRg">
-                                <rect key="frame" x="0.0" y="30" width="70" height="70"/>
+                                <rect key="frame" x="0.0" y="20" width="70" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="8bX-Pa-u78"/>
-                                    <constraint firstAttribute="width" constant="70" id="Sn7-N7-5YE"/>
+                                    <constraint firstAttribute="width" constant="70" id="eqD-Dh-37A"/>
+                                    <constraint firstAttribute="height" constant="70" id="mRA-kJ-kVs"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejA-i2-QEi">
-                                <rect key="frame" x="0.0" y="100" width="70" height="30"/>
+                                <rect key="frame" x="0.0" y="90" width="70" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="wvM-VQ-ZHw"/>
+                                    <constraint firstAttribute="width" constant="70" id="EKD-Vm-TuQ"/>
+                                    <constraint firstAttribute="height" constant="30" id="kdc-19-kZh"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="Dxp-HH-QRg" firstAttribute="centerY" secondItem="GWY-QW-5tl" secondAttribute="centerY" id="GVB-QG-iO1"/>
-                            <constraint firstAttribute="height" constant="130" id="LwU-71-KUo"/>
-                            <constraint firstAttribute="width" constant="70" id="Xnd-Vw-7ch"/>
-                            <constraint firstItem="Dxp-HH-QRg" firstAttribute="top" secondItem="S03-3u-YnR" secondAttribute="bottom" id="aDe-A1-Omp"/>
-                        </constraints>
                     </stackView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <constraints>
-                <constraint firstItem="GWY-QW-5tl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9JO-Z1-Xo4"/>
-                <constraint firstItem="GWY-QW-5tl" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="dIf-ci-fHK"/>
-                <constraint firstAttribute="bottom" secondItem="GWY-QW-5tl" secondAttribute="bottom" id="jW9-ZK-isZ"/>
-                <constraint firstAttribute="trailing" secondItem="GWY-QW-5tl" secondAttribute="trailing" id="pqN-C4-5Kd"/>
-            </constraints>
             <size key="customSize" width="70" height="130"/>
             <connections>
                 <outlet property="hourlyTemperatureLabel" destination="ejA-i2-QEi" id="Ahl-Pp-enx"/>
