--- a/WeatherForecast/WeatherForecast/View/DetailView/DailyWeather/DailyTableViewCell.xib
+++ b/WeatherForecast/WeatherForecast/View/DetailView/DailyWeather/DailyTableViewCell.xib
@@ -10,15 +10,31 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DailyTableViewCell" customModule="WeatherForecast" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DailyTableViewCell" rowHeight="192" id="KGk-i7-Jjw" customClass="DailyTableViewCell" customModule="WeatherForecast" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="418" height="192"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="418" height="192"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C7z-e2-SY2">
+                        <rect key="frame" x="0.0" y="0.0" width="418" height="192"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tableView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="C7z-e2-SY2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="6w0-4Y-jr1"/>
+                    <constraint firstAttribute="trailing" secondItem="C7z-e2-SY2" secondAttribute="trailing" id="Ir3-xy-GXP"/>
+                    <constraint firstItem="C7z-e2-SY2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="gXV-AJ-a6S"/>
+                    <constraint firstAttribute="bottom" secondItem="C7z-e2-SY2" secondAttribute="bottom" id="lY7-Lu-gca"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="132" y="101"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <connections>
+                <outlet property="dailyTableView" destination="C7z-e2-SY2" id="3eP-FC-wmA"/>
+            </connections>
+            <point key="canvasLocation" x="202.89855072463769" y="150"/>
         </tableViewCell>
     </objects>
 </document>
