--- a/WeatherForecast/WeatherForecast/View/DetailView/HourlyWeather/HourlyGridCell.xib
+++ b/WeatherForecast/WeatherForecast/View/DetailView/HourlyWeather/HourlyGridCell.xib
@@ -17,33 +17,31 @@
                 <rect key="frame" x="0.0" y="0.0" width="70" height="150"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GWY-QW-5tl">
-                        <rect key="frame" x="0.0" y="0.0" width="70" height="120"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="-5" translatesAutoresizingMaskIntoConstraints="NO" id="GWY-QW-5tl">
+                        <rect key="frame" x="0.0" y="0.0" width="70" height="98.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S03-3u-YnR">
-                                <rect key="frame" x="0.0" y="0.0" width="70" height="20"/>
+                                <rect key="frame" x="0.0" y="0.0" width="70" height="18"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="Xi0-zN-E0N"/>
-                                    <constraint firstAttribute="width" constant="70" id="vdX-GJ-YGa"/>
+                                    <constraint firstAttribute="height" constant="18" id="dmf-SC-FFr"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dxp-HH-QRg">
-                                <rect key="frame" x="0.0" y="20" width="70" height="70"/>
+                                <rect key="frame" x="0.0" y="13" width="70" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="eqD-Dh-37A"/>
-                                    <constraint firstAttribute="height" constant="70" id="mRA-kJ-kVs"/>
+                                    <constraint firstAttribute="height" constant="70" id="1xw-Iw-rwk"/>
+                                    <constraint firstAttribute="width" constant="70" id="jsv-tg-TuL"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejA-i2-QEi">
-                                <rect key="frame" x="0.0" y="90" width="70" height="30"/>
+                                <rect key="frame" x="0.0" y="78" width="70" height="20.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="EKD-Vm-TuQ"/>
-                                    <constraint firstAttribute="height" constant="30" id="kdc-19-kZh"/>
+                                    <constraint firstAttribute="height" constant="20.5" id="Z3K-7h-kdd"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
