--- a/WeatherForecast/WeatherForecast/View/DetailView/HourlyWeather/HourlyTableViewCell.xib
+++ b/WeatherForecast/WeatherForecast/View/DetailView/HourlyWeather/HourlyTableViewCell.xib
@@ -18,10 +18,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="sxx-83-pmb">
-                        <rect key="frame" x="20" y="10" width="488" height="200"/>
+                        <rect key="frame" x="20" y="0.0" width="488" height="210"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6ar-rO-lwX">
-                            <size key="itemSize" width="128" height="128"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="20" id="6ar-rO-lwX">
+                            <size key="itemSize" width="70" height="130"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -30,7 +30,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="sxx-83-pmb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="S6G-NL-sgj"/>
-                    <constraint firstItem="sxx-83-pmb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="WXb-CE-GTx"/>
+                    <constraint firstItem="sxx-83-pmb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="WXb-CE-GTx"/>
                     <constraint firstAttribute="trailing" secondItem="sxx-83-pmb" secondAttribute="trailing" id="kIO-Ri-bXz"/>
                     <constraint firstAttribute="bottom" secondItem="sxx-83-pmb" secondAttribute="bottom" id="vhY-51-gyC"/>
                 </constraints>
