--- a/WeatherForecast/WeatherForecast/View/DetailView/CurrentWeather/CurrentWeatherSectionHeaderView.xib
+++ b/WeatherForecast/WeatherForecast/View/DetailView/CurrentWeather/CurrentWeatherSectionHeaderView.xib
@@ -10,14 +10,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HourlyWeatherSectionHeaderView" customModule="WeatherForecast" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="490" height="76"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CurrentWeatherSectionHeaderView" customModule="WeatherForecast" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="520" height="95"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="하루날씨(hr)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzk-fO-SX1">
-                    <rect key="frame" x="30" y="0.0" width="460" height="76"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="현재날씨" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lJc-HH-qah">
+                    <rect key="frame" x="30" y="0.0" width="490" height="61"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -25,13 +24,13 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="tzk-fO-SX1" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="SPp-7e-bKP"/>
-                <constraint firstAttribute="bottom" secondItem="tzk-fO-SX1" secondAttribute="bottom" id="pcV-i5-eT8"/>
-                <constraint firstItem="tzk-fO-SX1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="rBV-IK-41V"/>
-                <constraint firstAttribute="trailing" secondItem="tzk-fO-SX1" secondAttribute="trailing" id="tIF-ie-lns"/>
+                <constraint firstItem="lJc-HH-qah" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="alz-Ln-oXY"/>
+                <constraint firstItem="lJc-HH-qah" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="bUg-VZ-a9a"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="lJc-HH-qah" secondAttribute="bottom" id="cgB-qZ-r2p"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="lJc-HH-qah" secondAttribute="trailing" id="e84-PW-y0e"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-126.08695652173914" y="-174.10714285714286"/>
+            <point key="canvasLocation" x="221.73913043478262" y="-164.39732142857142"/>
         </view>
     </objects>
 </document>
